@@ -1,5 +1,7 @@
 === master
 
+* Include :min_value and :max_value schema entries for integer columns on most databases (jeremyevans)
+
 * Don't wrap multi-inserts in a transaction when it's not required (shannoncole, jeremyevans) (#1945)
 
 * Update mock PostgreSQL adapter to default to PostgreSQL 15 instead of PostgreSQL 14 (jeremyevans)
